syntax = "proto3";
package TimeWarp.Blazor.Features.WeatherForecastsGrpc;
import "google/protobuf/timestamp.proto";

message GetWeatherForecastsRequest {
   int32 Days = 1;
}
message GetWeatherForecastsResponse {
   repeated WeatherForecastDto WeatherForecasts = 1;
}
message WeatherForecastDto {
   .google.protobuf.Timestamp Date = 1;
   string Summary = 2;
   int32 TemperatureC = 3;
}
service WeatherForecastService {
   rpc GetWeatherForecasts (GetWeatherForecastsRequest) returns (GetWeatherForecastsResponse);
}
